--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap');
+@import '@fortawesome/fontawesome-free/css/all.css';
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -11,7 +12,7 @@ body {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 20px;
   margin-bottom: 0;
 }
 
