--- a/src/components/MainSection/main-section.css
+++ b/src/components/MainSection/main-section.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 100px;
+    border-bottom: 1px solid white;
    
 }
 
@@ -19,14 +20,20 @@
     margin: 0;
     padding: 10px;
     text-align: center;
-    font-family: JetBrains Mono;
     font-size: 20px;
     line-height: 1.3em;
     letter-spacing: 1.6px;
     
 }
+.navigation-wrapper h5 {
+    cursor: pointer;
+}
 
-
+.social-information {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
 
 @media screen and (min-width: 768px) {
     .main-section-container  {
