--- a/src/components/MyWork/mywork.css
+++ b/src/components/MyWork/mywork.css
@@ -2,9 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: fit-content;
-    margin-bottom: 50px;
-    padding: 40px;
+    margin-bottom: 100px;
+}
+
+.mywork-container h1 {
+    font-size: 40px;
 }
 
 .mywork-wrapper-cards {
@@ -15,26 +17,38 @@
     cursor: pointer;
 }
 
+
 .mywork-card {
-    width: 350px;
-    height: 423px;
-    background-color: rgb(24, 23, 27);
+    width: 250px;
+    height: 250px;
+    background-color: #16202A;
+    box-shadow: 2px 2px 2px white;
     border-radius: 10px;
 }
 
 .mywork-image {
     width: 100%;
-    height: 282px;
+    height: 150px;
     border-radius: 10px 10px 0px 0px;
     background-image: cover;
 }
 
 .mywork-card-info {
-    padding: 5px 20px ;
+
+   margin-left: 10px;
+   margin-right: 10px;
+   margin-bottom: 10px;
+   margin-top: 0;
+   text-align: center;
+   height: 100px;
 }
+
+
 
 @media screen and (min-width: 768px) {
     .mywork-card {
-        width: 376px
+        width: 250px;
+        
     }
-  }
+}
+
