--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: JetBrains Mono;
   background-color: #16202A;
   color: white;
   padding: 0;
