--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -1,7 +1,10 @@
 .project-page-container {
-    height: 1000px;
-    width: fit-content;
+    height: fit-content;
+    width: 100%;
     display: flex;
+    margin-bottom: 30px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
     gap: 32px;
     flex-direction: column;
 }
@@ -22,4 +25,18 @@
 .description-container {
     padding: 10px;
     border: 1px solid white;
+}
+
+.project-image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 32px;
+}
+
+.project-image {
+    width: 700px;
+    height: 400px;
+    border: 1px solid white;
+    border-radius: 10px;
 }
