--- a/src/components/MyExpertise/myexpertise.css
+++ b/src/components/MyExpertise/myexpertise.css
@@ -24,6 +24,9 @@
     width: 300px;
     height: 250px;
     padding: 40px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .expertise-card h3 {
