--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -37,6 +37,13 @@
 .project-image {
     width: 700px;
     height: 400px;
-    border: 1px solid white;
-    border-radius: 10px;
+    
+    
+}
+
+.project-image img {
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
+    border: 1px solid #16202A;
 }
