--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -2,6 +2,7 @@
     height: fit-content;
     width: 100%;
     display: flex;
+    justify-content: center;
     margin-bottom: 30px;
     /* margin-left: 10px;
     margin-right: 10px; */
@@ -17,33 +18,55 @@
 
 .project-information-container {
    display: flex;
-   flex-direction: column;
    gap: 16px;
+   margin: 0 160px;
+
+   
   
 }
 
 .description-container {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     border: 1px solid white;
+    width: 50%;
+    padding: 40px;
+    height: 200px;
+
+   
+}
+
+.description-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px
+}
+
+.description-container h3 {
+    text-align: center;
+}
+
+.description-list li {
+    list-style: none;
 }
 
 .project-image-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 32px;
+    gap: 16px;
 }
 
 .project-image {
-    width: 700px;
-    height: 400px;
+    width: 600px;
+    /* height: 400px; */
     
     
 }
 
 .project-image img {
     width: 100%;
-    height: 400px;
-    border-radius: 20px;
+    /* height: 300px; */
     border: 1px solid #16202A;
 }
