--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    /* padding: 40px; */
+    gap: 16px;
     border-top: 1px solid white;
     font-family: JetBrains Mono;
     font-weight: bold !important;
