--- a/src/components/MainSection/main-section.css
+++ b/src/components/MainSection/main-section.css
@@ -1,7 +1,7 @@
 
 .main-section-container {
     width: 100%;
-    height: 700px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     margin-top: 100px;
@@ -10,34 +10,47 @@
 
 .main-section-container h1 {
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     margin: 0;
 }
 
-.main-section-container p {
-    margin: 0;
-    padding: 10px;
+.role-information {
+    margin-top: 10px;
     text-align: center;
-    font-size: 20px;
-    line-height: 1.3em;
-    letter-spacing: 1.6px;
-    
 }
+
+.main-section-description {
+    padding: 20px;
+}
+
+
 .navigation-wrapper h5 {
     cursor: pointer;
 }
 
 .social-information {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
     justify-content: center;
     margin-top: 30px;
 }
 
 @media screen and (min-width: 768px) {
     .main-section-container  {
-        height: 500px;
+        height: 300px;
     }
     .main-section-container h1 {
         font-size: 80px;
+    }
+    .main-section-description {
+        padding-left: 100px;
+        padding-right: 100px;
+        font-size: 20px;
+        text-align: center;
+    }
+    .social-information {
+        flex-direction: row;
     }
   }
