--- a/src/components/MyExpertise/myexpertise.css
+++ b/src/components/MyExpertise/myexpertise.css
@@ -1,7 +1,7 @@
 .expertise-container {
     display: flex;
     width: 100%;
-    gap: 64px;
+    gap: 32px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -9,7 +9,7 @@
 }
 
 .expertise-container h1 {
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .expertise-wrapper {
@@ -50,6 +50,10 @@
 @media screen and (min-width: 768px) {
     .expertise-container {
         height: 800px;
+    }
+    .expertise-container h1 {
+        font-size: 40px;
+        margin-bottom: 20px;
     }
     .expertise-wrapper {
         flex-direction: row;
