--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,9 +1,17 @@
 .nav-container {
-    width: 100%;
-    height: 100px;
     display: none;
-    background-color: #16202A;
+}
 
+.navbar-container-mobile {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: #16202A;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    
+  
 }
 
 .logo-wrapper {
@@ -35,8 +43,43 @@
     font-size: 16px;
 } 
 
+.hamburger-menu {
+    width: 100%;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    margin-top: 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+
+.hamburger-menu span {
+    display: block;
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin-bottom: 8px;
+    border-radius: 5px;
+}
+
+h1 {
+    font-family: JetBrains Mono;
+    font-size: 30px;
+    font-weight: bold !important;
+    color: #84D6EA;
+}
+
 @media screen and (min-width: 768px) {
     .nav-container  {
         display: flex;
+    }
+    .navbar-container-mobile {
+        width: 100%;
+        height: 100px;
+        display: none;
+        background-color: #16202A;
     }
   }
