--- a/src/components/MainSection/main-section.css
+++ b/src/components/MainSection/main-section.css
@@ -21,6 +21,7 @@
 
 .main-section-description {
     padding: 20px;
+ 
 }
 
 
@@ -40,6 +41,7 @@
 @media screen and (min-width: 768px) {
     .main-section-container  {
         height: 300px;
+        margin-top: 200px;
     }
     .main-section-container h1 {
         font-size: 80px;
@@ -48,7 +50,7 @@
         padding-left: 100px;
         padding-right: 100px;
         font-size: 20px;
-        text-align: center;
+        
     }
     .social-information {
         flex-direction: row;
