--- a/src/pages/projects/projects.css
+++ b/src/pages/projects/projects.css
@@ -14,11 +14,14 @@
    display: flex;
    flex-direction: column;
    gap: 16px;
-
-
-   
   
 }
+
+.description-text {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 
 .description-container {
     display: flex;
@@ -26,7 +29,7 @@
     justify-content: center;
     padding: 10px;
     border: 1px solid white;
-    height: 250px;
+    min-height: 250px;
   
    
 }
@@ -77,6 +80,12 @@
     .project-image img {
         width: 600px;
         height: 400px;
+    }
+    .description-text {
+        padding: 20px;
+    }
+    .project-page-container {
+        margin-top: 100px;
     }
 
 }
