--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -48,7 +48,7 @@
     margin-left: 200px;
 }
 
-.navigation-wrapper h5 {
+.navigation-wrapper .change-language,   h5 {
     font-family: JetBrains Mono;
     font-weight: bold !important;
     font-size: 16px;
@@ -83,14 +83,31 @@ h1 {
     color: #84D6EA;
 }
 
+h5 {
+    margin: 0;
+    padding: 0;
+  
+}
+
 @media screen and (min-width: 768px) {
     .nav-container  {
         display: flex;
+        align-items: center;
     }
     .navbar-container-mobile {
         width: 100%;
         height: 100px;
         display: none;
         background-color: #16202A;
+    }
+    .change-language {
+        display: flex;
+        gap: 32px;
+        padding-right: 20px;
+        cursor: pointer;
+    }
+    .lenguage {
+        color:#84D6EA  ;
+        font-weight: bold !important;
     }
   }
