--- a/src/components/responsiveNavBar/responseNavBar.css
+++ b/src/components/responsiveNavBar/responseNavBar.css
@@ -2,13 +2,10 @@
 
 
 .responsive-info-navbar-container {
-    /* display: flex;
-    flex-direction: column;
-    border: 1px solid white;
-    width: 100%; */
     border-radius: 10px;
     background-color: black;
     width: 95%;
+    height: 200px;
 }
 
 .responsive-info-navbar-close {
@@ -19,5 +16,24 @@
 }
 
 .responsive-info-links {
-   padding: 0 20px
+   padding: 0 20px;
+   display: flex;
+   flex-direction: column;
+   gap: 8px;
+}
+
+.lenguage {
+    cursor: pointer;
+    color: #84D6EA;
+
+
+}
+
+.change-language-mobile {
+    display: flex;
+    gap: 16px;
+   justify-content: center;
+   align-items: end;
+   height: fit-content;
+    
 }
