--- a/src/components/responsiveNavBar/responseNavBar.css
+++ b/src/components/responsiveNavBar/responseNavBar.css
@@ -25,8 +25,6 @@
 .lenguage {
     cursor: pointer;
     color: #84D6EA;
-
-
 }
 
 .change-language-mobile {
@@ -34,6 +32,6 @@
     gap: 16px;
    justify-content: center;
    align-items: end;
-   height: fit-content;
+   height: 70px
     
 }
