--- a/src/components/MyExpertise/myexpertise.css
+++ b/src/components/MyExpertise/myexpertise.css
@@ -18,17 +18,33 @@
     gap: 16px;
    
 }
-
-.expertise-card {
-    border: 1px solid white;
-    width: 300px;
-    height: 280px;
-    padding: 40px 30px;
+.expertise-list {
+    margin-top: 30px;
     display: flex;
-    flex-direction: column;
+    padding: 0 20px;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 32px;
 }
 
+.expertise-card {
+    /* border: 1px solid white; */
+    /* background: linear-gradient(to right, black, white); */
+    border-radius: 10px;
+    background: linear-gradient(98.88deg, #203040 -1.89%, #203040 98.78%);
+    /* background-color: black; */
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 300px;
+    height: 280px;
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+}
 .expertise-card h3 {
     text-align: center;
 }
@@ -59,10 +75,11 @@
     }
     .expertise-wrapper {
         flex-direction: row;
-        gap: 0;
+        gap: 16px;
     }
     .expertise-card {
-        width: 400px;
-        gap: 0px;
+        gap: 16px;
+        width: 320px;
+       
     }
   }
