--- a/src/components/MyWork/mywork.css
+++ b/src/components/MyWork/mywork.css
@@ -3,18 +3,29 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 100px;
+    padding: 20px;
+}
+
+
+.mywork-container p {
+    font-size: 20px;
+    margin: 0;
 }
 
 .mywork-container h1 {
     font-size: 30px;
     margin-top: 50px;
+    margin-bottom: 32px;
 }
+
+
 
 .mywork-wrapper-cards {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 32px;
-    margin-top: 20px;
+    margin-top: 50px;
     flex-wrap: wrap;
     cursor: pointer;
 }
@@ -56,6 +67,13 @@
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 20px;
+    }
+    .mywork-container p {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+    .mywork-wrapper-cards {
+        flex-direction: row;
     }
 }
 
