--- a/src/components/MyExpertise/myexpertise.css
+++ b/src/components/MyExpertise/myexpertise.css
@@ -67,15 +67,20 @@
  
 @media screen and (min-width: 768px) {
     .expertise-container {
-        height: 800px;
+        height: 700px;
     }
     .expertise-container h1 {
+        margin-top: 200px;
         font-size: 40px;
         margin-bottom: 20px;
     }
     .expertise-wrapper {
         flex-direction: row;
+        flex-wrap: wrap;
+        padding-left: 100px;
+        padding-right: 100px;
         gap: 16px;
+        margin-bottom: 100px;
     }
     .expertise-card {
         gap: 16px;
