--- a/src/components/projects/project-card.css
+++ b/src/components/projects/project-card.css
@@ -1,7 +1,7 @@
 
 .project-card {
   width: 300px;
-  padding: 10px;
+  padding: 15px;
   margin: 10px;
   background-color: #16202A;
   border-radius: 8px;
@@ -9,6 +9,7 @@
   transition: transform 0.3s;
   color: #FFFFFF;
   cursor: pointer;
+  min-height: 300px;
   font-family: Arial, sans-serif;
 }
 
@@ -41,4 +42,11 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 32px;
+}
+
+.project-description {
+  font-size: 0.9rem;
+  width: 100%;
+  line-height: 1.2rem;
+  margin-bottom: 15px;
 }
