--- a/src/components/MyWork/mywork.css
+++ b/src/components/MyWork/mywork.css
@@ -3,58 +3,21 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
+    gap: 32px;
     padding: 20px;
 }
-
-
-/* .mywork-container p {
-    margin: 0;
-} */
 
 .mywork-container h1 {
     font-size: 30px;
     margin-top: 50px;
-    margin-bottom: 32px;
 }
 
-
-
-/* .mywork-wrapper-cards {
+.mywork-wrapper-cards {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     gap: 32px;
-    margin-top: 50px;
-    flex-wrap: wrap;
-    cursor: pointer;
-} */
-
-/* 
-.mywork-card {
-    width: 250px;
-    height: 250px;
-    background-color: #16202A;
-    box-shadow: 2px 2px 2px white;
-    border-radius: 10px;
-} */
-
-/* .mywork-image {
-    width: 100%;
-    height: 150px;
-    border-radius: 10px 10px 0px 0px;
-    background-image: cover;
-} */
-
-/* .mywork-card-info {
-
-   margin-left: 10px;
-   margin-right: 10px;
-   margin-bottom: 10px;
-   margin-top: 0;
-   text-align: center;
-   height: 100px;
-} */
-
+}
 
 
 @media screen and (min-width: 768px) {
