--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -9,3 +9,10 @@
   font-size: 40px;
   margin-bottom: 32px;
 }
+
+@media screen and (min-width: 768px) {
+  .projects-container {
+    margin-top: 100px;
+  }
+}
+
